k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: riya-touch
  labels:
    app.kubernetes.io/name: riya-touch
